타이틀 수정

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>WEB-1 WANACOME</title>
+<title>WEB-1 Welcome</title>
 <meta charset="utf-8">
 </head>
 <body>
