--- a/3.html
+++ b/3.html
@@ -4,19 +4,25 @@
 <title>WEB-1 JAVASCRIPT</title>
 <meta charset="utf-8">
 </head>
+<link rel="stylesheet" href="style.CSS">
 <body>
   <h1><a href="index.html">WEB</a></h1>
+<div id="grid">
+<div>
 <ol>
-  <li><a href="1.html">HTML</a></li>
-  <li><a href="2.html">CSS</a></li>
-  <li><a href="3.html">Javascript</a></li>
+  <li><a href="1.html"class="saw">HTML</a></li>
+  <li><a href="2.html"class="saw">CSS</a></li>
+  <li><a href="3.html"class="saw active">Javascript</a></li>
 </ol>
-
+</div>
+<div id="article">
 <h2>Javascript</h2>
 <p>
   <a href="https://en.wikipedia.org/wiki/JavaScript" target="_blank">JavaScript (/ˈdʒɑːvəskrɪpt/), often abbreviated JS</a>, is a programming language that is one of the core technologies of the World Wide Web, alongside HTML and CSS.Over 97% of websites use JavaScript on the client side for web page behavior, often incorporating third-party libraries.[13] All major web browsers have a dedicated JavaScript engine to execute the code on users' devices.
 
   JavaScript is a high-level, often just-in-time compiled language that conforms to the ECMAScript standard.[14] It has dynamic typing, prototype-based object-orientation, and first-class functions. It is multi-paradigm, supporting event-driven, functional, and imperative programming styles. It has application programming interfaces (APIs) for working with text, dates, regular expressions, standard data structures, and the Document Object Model (DOM).
 </p>
+</div>
+</div>
 </body>
 </html>
